<resources>
    <string name="app_name">203030503077_UAS_Pedro Rafael Talenta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nama</string>
    <string name="nav_header_subtitle">username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_pemesanan">Pemesanan</string>
    <string name="menu_bus">Bus</string>
    <string name="menu_penumpang">Penumpang</string>
    <string name="fab">Floating Action Button</string>
    <string name="homepage">Home Background</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
</resources>